[gd_scene load_steps=13 format=2]

[ext_resource path="res://scn/scenes/input_container2/InputContainer2.gd" type="Script" id=1]
[ext_resource path="res://scn/scenes/thumbnail_image_holder/T_ImageHolder.tscn" type="PackedScene" id=2]
[ext_resource path="res://supabase-ui/data_input/input/Input.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/imgs/icons/send_white_36dp.svg" type="Texture" id=4]
[ext_resource path="res://supabase-ui/basic/button/primary/PrimaryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://supabase-ui/res/fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.14902, 0.14902, 0.14902, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=3]
resource_local_to_scene = true
default_font = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
content_margin_left = 7.0
content_margin_right = 7.0
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color( 0.75, 0.75, 0.75, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.0392157 )
shadow_size = 1
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=6]

[node name="InputContainer" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 108.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
image_holder_scene = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
show_behind_parent = true
margin_left = 1.0
margin_top = 1.0
margin_right = 983.0
margin_bottom = 67.0
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 982.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 50 )

[node name="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 930.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
placeholder = "Write something..."
show_name = false
input_name = "sss"

[node name="SendBtn" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 934.0
margin_top = 16.0
margin_right = 968.0
margin_bottom = 50.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )
enable_loading = true
disabled = true
icon_enabled = true
texture = ExtResource( 4 )
expand = true
size = Vector2( 20, 20 )
text_enabled = false

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 972.0
margin_right = 982.0
margin_bottom = 66.0
custom_styles/separator = SubResource( 6 )
custom_constants/separation = 10

[node name="Imgs" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
margin_top = 50.0
margin_right = 982.0
margin_bottom = 50.0
grow_vertical = 0

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_pressed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/SendBtn" to="." method="_on_SendBtn_pressed"]
